# agent-py

./: .gitignore  README.md  pyproject.toml
src/agent_py/: cli.py  daemon.py  dap.py  format.py  ipc.py  launch.py  state.py
tests/: conftest.py  test_breakpoints.py  test_dap.py  test_e2e.py  test_format.py
tests/fixtures/: sample.py
